--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -9,6 +9,7 @@
   --btn-color: #ffffff;
   --btn-background-color: rgba(50, 50, 50, 1);
   --github-mark-url: url('./images/github-mark.png');
+  --linkedin-logo-url: url('./images/In-Blue-128@2x.png');
 }
 @media (prefers-color-scheme: dark) {
   :root {
@@ -19,6 +20,7 @@
     --btn-color: #151515;
     --btn-background-color: rgba(232, 232, 232, 1);
     --github-mark-url: url('./images/github-mark-white.png');
+    --linkedin-logo-url: url('./images/In-White-128@2x.png');
   }
 }
 /* Copy of the variables in :root above */
@@ -30,6 +32,7 @@
   --btn-color: #ffffff;
   --btn-background-color: rgba(50, 50, 50, 1);
   --github-mark-url: url('./images/github-mark.png');
+  --linkedin-logo-url: url('./images/In-Blue-128@2x.png');
 }
 /* Copy of the variables in @media (prefers-color-scheme: dark) :root above */
 :root[data-color-scheme='dark'] {
@@ -40,6 +43,7 @@
   --btn-color: #151515;
   --btn-background-color: rgba(232, 232, 232, 1);
   --github-mark-url: url('./images/github-mark-white.png');
+  --linkedin-logo-url: url('./images/In-White-128@2x.png');
 }
 /* size of iPad screen is 768px x 1024px in portrait mode */
 @media only screen and (min-width: 768px) and (min-height: 768px) {
@@ -94,6 +98,12 @@ img.twitter-logo {
   width: 100px;
   height: auto;
 }
+img.linkedin-logo {
+  content: var(--linkedin-logo-url);
+  width: 60px;
+  height: auto;
+  margin: 20px;
+}
 .flex-box {
   display: flex;
   flex-wrap: wrap;
@@ -109,6 +119,10 @@ img.twitter-logo {
 }
 .flex-box.horizontal {
   flex-direction: row;
+}
+.flex-box.no-wrap {
+  flex-wrap: nowrap;
+  padding: 0;
 }
 .margin-top-1 {
   margin-top: 1rem;
