Update style.css to adjust logo dispositions

--- a/src/resources/style.css
+++ b/src/resources/style.css
@@ -96,9 +96,9 @@ img.twitter-logo {
 }
 .flex-box {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
   font-size: 1rem;
   padding-left: 1rem;
